<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_feature_todo">Todo</string>
    <string name="completed">Completed</string>
    <string name="all">All</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
<<<<<<< HEAD
    <string name="edit_content">edit content</string>
    <string name="edit_title">edit title</string>
    <string name="close_detail_page">close detail page</string>
    <string name="delete_todo">delete todo</string>
    <string name="save_btn">save btn</string>
    <string name="add_description">add description</string>
    <string name="add_todo">add todo</string>
    <string name="title">Title</string>
    <string name="content">This Is Content</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
=======
    <string name="close_detail_page">close detail page</string>
    <string name="delete_todo">delete todo</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="save_btn">save btn</string>
    <string name="checkbox">checkbox</string>
>>>>>>> ff17c6154202b11c4922912091b01e65e39aa67c
</resources>