<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.feature_todo.EditFragment">
    <ImageView
        android:id="@+id/close"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/close_detail_page" />
    <ImageView
        android:id="@+id/delete"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/delete_todo" />
    <EditText
        android:id="@+id/title"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:hint="@string/title"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/content"
        app:layout_constraintTop_toBottomOf="@id/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="Title" />
    <EditText
        android:id="@+id/content"
        android:layout_height="150dp"
        android:layout_width="match_parent"
        android:hint="@string/content"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/save"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="Title" />
    <CheckBox
        android:id="@+id/completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/save"
        app:layout_constraintTop_toBottomOf="@id/content"
        android:text="@string/completed"
        />

    <ImageView
        android:id="@+id/save"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_save_alt_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/save_btn"
        android:background="#000000"
        />


</androidx.constraintlayout.widget.ConstraintLayout>