<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/close"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/close_detail_page" />

    <ImageView
        android:id="@+id/delete"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/delete_todo" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:textSize="60sp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title"
        android:gravity="center"/>

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:text="@string/content"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/is_complete"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>